[package]
name = "runner-utils"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Provides utility functions for cargo runner crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
wait-timeout = "0.2.0"

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
